--- a/admin/app/resources/site/css/style.css
+++ b/admin/app/resources/site/css/style.css
@@ -192,8 +192,10 @@ ol {
   top: 0;
   height: 30px;
   width: 30px;
-  border-left: 2px solid #00bfe7;
-  border-top: 2px solid #00bfe7;
+  /*border-left: 2px solid #00bfe7;
+  border-top: 2px solid #00bfe7;*/
+  border-left: 2px solid #e6bf5e;
+  border-top: 2px solid #e6bf5e;
   content: "";
   z-index: -1;
   -webkit-transition: all, 0.7s;
@@ -206,8 +208,10 @@ ol {
   bottom: 0;
   height: 30px;
   width: 30px;
-  border-right: 2px solid #00bfe7;
-  border-bottom: 2px solid #00bfe7;
+  /*border-right: 2px solid #00bfe7;
+  border-bottom: 2px solid #00bfe7;*/
+  border-right: 2px solid #e6bf5e;
+  border-bottom: 2px solid #e6bf5e;
   content: "";
   z-index: -1;
   -webkit-transition: all, 0.7s;
@@ -218,7 +222,8 @@ ol {
 .site-btn {
   font-size: 15px;
   color: #ffffff;
-  background: #00bfe7;
+  /*background: #00bfe7;*/
+  background: #e6bf5e;
   font-family: "Play", sans-serif;
   font-weight: 700;
   border: none;
@@ -1948,7 +1953,8 @@ ol {
     position: absolute;
     right: 10px;
     top: 26px;
-    background: #00bfe7;
+    /*background: #00bfe7;*/
+    background: #e6bf5e;
   }
 
   .header .container {
